src/styles/styles.scss
$width: 2388px;
$height: 1668px;

body {
  margin: 0;
  padding: 0;
  font-family: "IBM Plex Sans Thai", sans-serif;
  font-size: 16px;
}

.wrapper {
  border: 0px solid #ffffff;
  width: $width;
  height: $height;
  /*
  aspect-ratio: 2388/1668;
  height: 100vh;
  */
  background-color: #fff;
  position: relative;
}

.logo {
  position: absolute;
  width: 75px;
  height: 59px;
  left: 50%;
  transform: translateX(-50%);
  bottom: 48px;
}

.wrapper > .header {
  display: flex;
  width: $width - 302px;
  padding-top: 320px;
  margin: 0 auto 0 auto;
  justify-content: space-between;
  align-items: center;
}

.wrapper > .header > .left {
  display: flex;
  align-items: center;

  /*
  > .bar {
    width: 0px;
    height: 250px;
    left: 151px;
    top: 212px;
    background-color: #8e8e8e;
    border: 4px solid #8e8e8e;
    border-radius: 24px;
    display: inline-block;
  }
  */
}

.wrapper > .header > .left > .title-container {
  display: inline-block;
  /*margin-left: 48px;*/

  > .title {
    font-size: 88px;
    line-height: 1.15;
    font-weight: 600;
  }

  > .subtitle {
    font-size: 36px;
    font-weight: 500;
  }
}

.wrapper > .header > .right {
  text-align: right;

  > .room {
    font-size: 42px;
    margin-bottom: 16px;
    font-weight: 500;
  }

  > .teacher {
    > .text {
      font-size: 32px;
    }
  }
}

.wrapper > .main {
  width: $width - 302px;
  margin: 175px auto 0 auto;
  position: relative;
}

.wrapper > .main > .days {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
}

.wrapper > .main > .days > .day {
  width: 100%;
  position: relative;
  margin-bottom: 116px;

  > .button {
    position: relative;
    display: inline-block;
    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.15);
    border-radius: 36px;
    padding: 24px 84px;
    font-size: 36px;
    color: #fff;
    z-index: 2;
    width: 238.7px;
    text-align: center;
  }

  > .line {
    height: 28px;
    width: 100%;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.15);
  }
}

.schedules {
  position: absolute;
  top: -16px;
  left: 292px;
  z-index: 3;
}

.schedules > .mon-to-thurs {
  display: flex;
  flex-direction: row;
}

.schedules > .mon-to-thurs > .col {
  position: relative;
  display: flex;
  flex-direction: column;
  margin-right: 15px;

  &:last-child {
    margin-right: 0;
  }

  > .time {
    font-family: "Roboto", sans-serif;
    position: absolute;
    top: -48px;
    left: 50%;
    transform: translateX(-50%);
    text-align: center;
    font-size: 24px;
    width: 100%;
  }

  > .button {
    position: relative;
    display: inline-block;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
    border-radius: 20px;
    font-size: 36px;
    width: 197.5px;
    height: 162px;
    background-color: #fff;
    margin-bottom: 52px;

    &:last-child {
      margin-bottom: 0;
    }
  }

  > .break10-button {
    position: relative;
    display: inline-block;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
    border-radius: 17px;
    width: 76px;
    height: 100%;
    background-color: #fff;
    margin-bottom: 0;

    > .text {
      text-align: center;
      color: #a6a8ab;
      font-size: 24px;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }
  }

  > .lunch-button {
    position: relative;
    display: inline-block;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
    border-radius: 17px;
    width: 130px;
    height: 100%;
    background-color: #fff;
    margin-bottom: 0;

    > .text {
      text-align: center;
      color: #a6a8ab;
      font-size: 32px;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }
  }
}

.schedules > .mon-to-thurs > .col > .button > .text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  width: 100%;
  padding: 0 10px;

  > .subject {
    width: 100%;
    font-size: 24px;
    display: block;
    line-height: 1.2;
    margin-bottom: 10px;
    color: #000;
    font-weight: 400;
    white-space: pre;
    word-wrap: break-word;
  }

  > .teacher {
    width: 100%;
    font-size: 18px;
    color: #a6a8ab;
    word-wrap: break-word;
  }
}

/*
.schedules > .fri {
  > .button {
    position: relative;
    display: inline-block;
    box-shadow: 0px 4px 17px rgba(0, 0, 0, 0.25);
    border-radius: 20px;
    width: 100%;
    height: 152px;
    background-color: #fff;

    > .text {
      font-size: 36px;
      text-align: center;
      color: #a6a8ab;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }
  }
}
*/

.popup {
  background-color: #ffffff;
  border-radius: 16px;
  border: 1px solid #fff;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  padding: 25px 50px;
  width: 60vw;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.popup > .header {
  > .title {
    font-weight: 500;
    font-size: 24px;
    margin-bottom: 12px;
  }

  > .description {
    font-weight: 400;
    color: #a6a8ab;
  }
}

